syntax = "proto3";

package kantaloupe.dynamia.ai.api.core.v1alpha1;

import "api/types/objectmeta.proto";
import "api/types/page.proto";

option go_package = "github.com/dynamia-ai/kantaloupe/api/core/v1alpha1;v1alpha1";

message Secret {
    // Standard object's metadata.
    kantaloupe.dynamia.ai.api.types.ObjectMeta metadata = 1;

    // Immutable, if set to true, ensures that data stored in the Secret cannot
    // be updated (only object metadata can be modified).
    // If not set to true, the field can be modified at any time.
    // Defaulted to nil.
    // +optional
    bool immutable = 2;

    // Data contains the secret data. Each key must consist of alphanumeric
    // characters, '-', '_' or '.'. The serialized form of the secret data is a
    // base64 encoded string, representing the arbitrary (possibly non-string)
    // data value here. Described in https://tools.ietf.org/html/rfc4648#section-4
    // +optional
    map<string, string> data = 3;

    // stringData allows specifying non-binary secret data in string form.
    // It is provided as a write-only input field for convenience.
    // All keys and values are merged into the data field on write, overwriting any existing values.
    // The stringData field is never output when reading from the API.
    // +k8s:conversion-gen=false
    // +optional
    map<string, string> string_data = 4;

    // Used to facilitate programmatic handling of secret data.
    // +optional
    string type = 5;
}

// Get list of Secrets data details.
message ListSecretsRequest {
    // Cluster represents which cluster the secret belongs to.
    string cluster = 1;

    // Page requested.
    int32 page = 2;

    // Size per page requested.
    int32 page_size = 3;

    // Namespace is the metadata.namespace of the referenced secret.
    // This field is required in all cases.
    string namespace = 4;

    // The name use to search specific secret
    string name = 5;

    // sort_option determines the cluster list order reference.
    kantaloupe.dynamia.ai.api.types.SortOption sort_option = 6;

    // LabelSelector is the format after labels.FormatLabels used to filter
    string label_selector = 7;

    // FieldSelector is the format after labels.FormatLabels used to filter
    string field_selector = 8;

    // Type is used to filter secrets by type.
    string type = 9;

    // OnlyMetadata lists only metadata of secrets, default false.
    bool only_metadata = 10;

    // FuzzyName is used to fuzzy search by multiple parameters including name.
    string fuzzy_name = 11;
}

// List of Secrets data details.
message ListSecretsResponse {
    // Secret name.
    repeated Secret items = 1;

    // Pagination returned contains current page, size, and total.
    kantaloupe.dynamia.ai.api.types.Pagination pagination = 2;
}

// Get Secret information .
message GetSecretRequest {
    // Cluster represents which cluster the secret belongs to.
    string cluster = 1;

    // Namespace is the metadata.namespace of the referenced secret.
    // This field is required in all cases.
    string namespace = 2;

    // Secret name.
    string name = 3;
}

// It returns Secret data information in json format.
message GetSecretResponse {
    // The data field is the Secret YAML details
    Secret data = 1;
}

// Create Secret in the cluster.
message CreateSecretRequest {
    // Cluster represents which cluster the secret belongs to.
    string cluster = 1;

    // When the current namespace is named, the priority is higher than that in yaml
    string namespace = 2;

    // The data is the Secret YAML details
    Secret data = 3;
}

// It returns the created Secret data information.
message CreateSecretResponse {
    // The data is the Secret YAML details
    Secret data = 1;
}

// Delete Secret data in the cluster.
message DeleteSecretRequest {
    // Cluster represents which cluster the secret belongs to.
    string cluster = 1;

    // Namespace is the metadata.namespace of the referenced secret.
    // This field is required in all cases.
    string namespace = 2;

    // Secret name.
    string name = 3;
}